Cleanup and improve avatars

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -184,6 +184,11 @@ msgstr "Channel"
 msgid "away"
 msgstr "Away"
 
+#: Toggle Away Status
+msgid "toggle_away"
+msgstr "Toggle Away Status"
+
+
 
 #: Durations
 
